--- a/server/picStoryServer/.classpath
+++ b/server/picStoryServer/.classpath
@@ -91,4 +91,7 @@
   <classpathentry kind="var" path="M2_REPO/com/google/code/simple-spring-memcached/simple-spring-memcached/3.1.0/simple-spring-memcached-3.1.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/googlecode/xmemcached/xmemcached/1.3.8/xmemcached-1.3.8.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/caucho/hessian/4.0.7/hessian-4.0.7.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/data/spring-data-mongodb/1.2.1.RELEASE/spring-data-mongodb-1.2.1.RELEASE.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/data/spring-data-commons/1.5.1.RELEASE/spring-data-commons-1.5.1.RELEASE.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mongodb/mongo-java-driver/2.10.1/mongo-java-driver-2.10.1.jar"/>
 </classpath>
