--- a/server/picStoryServer/pom.xml
+++ b/server/picStoryServer/pom.xml
@@ -381,6 +381,12 @@
             <version>4.0.7</version>
        </dependency>
     
+       	<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-mongodb</artifactId>
+		    <version>1.2.1.RELEASE</version>
+	    </dependency>
+	
 	</dependencies>
 
 	<build>
